force-app/main/default/staticresources/python/Disappear/src/objects/ProfileTabTile__c.object
<CustomObject>
    <fields>
        <fullName>APPEAR_626__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR 626</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_Business_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR Business Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_External_Writer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is created to give access to the publication Tiles</description>
        <label>APPEAR External Writer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_FPRC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR FPRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_FPR_Only_Submitters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR FPR Only Submitters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_Functional_Pub_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is created to give the permission to different Tiles of Publication</description>
        <label>APPEAR Functional Pub Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_GPPL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR GPPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_International_FPRC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR International FPRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_Pub_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR Pub Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR Read-Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_Reviewers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR Reviewers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPEAR_Writing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPEAR Writing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Tab__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Profile Tab</label>
        <referenceTo>ProfileTab__c</referenceTo>
        <relationshipLabel>Profile Tab Tiles</relationshipLabel>
        <relationshipName>Profile_Tab_Tiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Admin</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Tab Tile</label>
    <nameField>
        <label>ProfileTabTile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Tab Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>